--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <div class="items">
             <div class="buttonSection">
-                <a href="website-2.html"><button class="button"> Upcoming Match</button></a>
+                <a href="match.html"><button class="button"> Upcoming Match</button></a>
                 <button class="button"> Group </button>
                 <button class="button">Blog</button>
             </div>
